<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:visibility="visible"
    tools:context=".ui.activities.SignInActivity">

    <ScrollView
        android:id="@+id/signInContext"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/sign_up_title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/anton"
                android:text="@string/sign_in_to_your_account"
                android:textColor="#000000"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/sign_up_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/continue_from_where_you_left_off"
                android:textColor="@color/dark_900"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="17dp"
                android:orientation="vertical">



                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/email_address"
                    android:textColorHint="@color/two"
                    app:boxStrokeColor="@color/two">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signInEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textColorHint="@color/two" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/two"
                    app:boxStrokeColor="@color/two"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/signInPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textColorHint="@color/two" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/resetPasswordConfigurator"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:text="Reset Password"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/two"
                    app:backgroundTint="@color/white" />

            </LinearLayout>

            <Button
                android:id="@+id/signInButton"
                style="@style/Widget.Material3.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="18dp"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/white"

                android:textSize="15sp"
                android:textStyle="bold"
                app:rippleColor="@color/dark_900" />

            <Button
                android:id="@+id/redirectButton"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/don_t_have_an_account_create_one"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:backgroundTint="@color/white" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>