<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.SignUpActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/sign_up_title2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:fontFamily="@font/anton"
            android:text="Welcome."
            android:textColor="#000000"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/sign_up_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="Create your new account with stylelink."
            android:textColor="@color/dark"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="17dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/username"
                android:textColorHint="@color/dark"
                app:boxStrokeColor="@color/grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/email_address"
                android:textColorHint="@color/dark"
                app:boxStrokeColor="@color/grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/mobile"
                app:prefixText="+27"
                android:textColorHint="@color/dark"
                app:boxStrokeColor="@color/grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:hint="@string/password"
                android:textColorHint="@color/dark"
                app:boxStrokeColor="@color/grey">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="10sp"
                android:textColor="@color/dark"
                android:text="@string/by_checking_this_box_you_agree_to_sylelink_s_terms_and_condition" />
        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_medium"
            android:padding="18dp"
            android:text="Create Account"
            android:textAlignment="viewStart"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <!--        <Button-->
<!--            android:id="@+id/button"-->
<!--            style="@style/Widget.AppCompat.Button"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="12dp"-->
<!--            android:background="@color/black"-->
<!--            android:fontFamily="@font/poppins_medium"-->
<!--            android:padding="15dp"-->
<!--            android:text="@string/create_account"-->
<!--            android:textAlignment="viewStart"-->
<!--            android:textAllCaps="false"-->
<!--            android:textColor="@color/white"-->
<!--            app:backgroundTint="@color/black"-->
<!--            app:cornerRadius="20sp"-->
<!--            app:icon="@drawable/baseline_arrow_forward_ios_24"-->
<!--            app:iconGravity="end"-->
<!--            app:rippleColor="@color/dark"-->
<!--            app:strokeColor="@color/dark"-->
<!--            app:strokeWidth="2dp" />-->
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>